demo-orgs: Generate realm name automatically for demo organizations.
Instead of asking users creating demo organizations to input a name
for the organization, we generate the name from the same words that
are used for the organization's string_id/subdomain.

--- a/templates/zerver/create_realm/create_realm.html
+++ b/templates/zerver/create_realm/create_realm.html
@@ -27,6 +27,7 @@
                   action="{{ current_url() }}" method="post">
                     {{ csrf_input }}
 
+                    {% include 'zerver/create_realm/realm_creation_name_form_field.html' %}
                     {% include 'zerver/create_realm/realm_creation_base_form_fields.html' %}
                     {% include 'zerver/create_realm/realm_creation_subdomain_form_field.html' %}
                     {% if is_realm_import_enabled %}
