--- a/templates/zerver/create_user/register.html
+++ b/templates/zerver/create_user/register.html
@@ -40,6 +40,7 @@ Form is validated both client-side using jquery-validation (see signup.js) and s
                 </legend>
                 {% with %}
                     {% set user_registration_form = "true" %}
+                    {% include 'zerver/create_realm/realm_creation_name_form_field.html' %}
                     {% include 'zerver/create_realm/realm_creation_base_form_fields.html' %}
                     {% include 'zerver/create_realm/realm_creation_subdomain_form_field.html' %}
                     {% if is_realm_import_enabled %}
